# DiagramEditor

./: CMakeLists.txt  Doxyfile  Doxyfile.bak  connectableresizer.cpp  connectableresizer.h  connectionspecifications.cpp  connectionspecifications.h  diagram.cpp  diagram.h  diagramcomponent.cpp  diagramcomponent.h  diagramconnection.cpp  diagramconnection.h  diagramelement.cpp  diagramelement.h  diagramitem.cpp  diagramitem.h  diagramresizer.cpp  diagramresizer.h  diagramspecification.cpp  diagramspecification.h  diagramtype.cpp  diagramtype.h  diagramtypegroup.cpp  diagramtypegroup.h  elementspecifications.cpp  elementspecifications.h  fixedspecification.cpp  fixedspecification.h  geometryutils.cpp  geometryutils.h  jsonfile.cpp  jsonfile.h  jsonserializable.cpp  jsonserializable.h  listspecification.cpp  listspecification.h  longtextspecification.cpp  longtextspecification.h  main.cpp  (+19 more)
Resources/: diagramsDescriptor.json  resources.qrc
html/: annotated.html  annotated_dup.js  class_connectable_resizer-members.html  class_connectable_resizer.html  class_connectable_resizer.js  class_connectable_resizer__coll__graph.map  class_connectable_resizer__coll__graph.md5  class_connectable_resizer__inherit__graph.map  class_connectable_resizer__inherit__graph.md5  class_connectable_resizer_a19d74c3b186853ab82ce04027f2ee521_cgraph.map  class_connectable_resizer_a19d74c3b186853ab82ce04027f2ee521_cgraph.md5  class_connectable_resizer_a19d74c3b186853ab82ce04027f2ee521_icgraph.map  class_connectable_resizer_a19d74c3b186853ab82ce04027f2ee521_icgraph.md5  class_connectable_resizer_a4799915c12882bcf6e5bb9af27d79993_cgraph.map  class_connectable_resizer_a4799915c12882bcf6e5bb9af27d79993_cgraph.md5  class_connectable_resizer_a60ed313a104094d2d5e4b39f461ab0ed_cgraph.map  class_connectable_resizer_a60ed313a104094d2d5e4b39f461ab0ed_cgraph.md5  class_connectable_resizer_a6356d39d8c85b1101376312a1029e300_cgraph.map  class_connectable_resizer_a6356d39d8c85b1101376312a1029e300_cgraph.md5  class_connectable_resizer_a6ea0af22dded9e9ca338e40d7728c0ae_cgraph.map  class_connectable_resizer_a6ea0af22dded9e9ca338e40d7728c0ae_cgraph.md5  class_connectable_resizer_a8bdfcc2c45914d0783063007c023f737_cgraph.map  class_connectable_resizer_a8bdfcc2c45914d0783063007c023f737_cgraph.md5  class_connectable_resizer_ae3e92fe2383800df57e026a2c11e874f_cgraph.map  class_connectable_resizer_ae3e92fe2383800df57e026a2c11e874f_cgraph.md5  class_connectable_resizer_ae3e92fe2383800df57e026a2c11e874f_icgraph.map  class_connectable_resizer_ae3e92fe2383800df57e026a2c11e874f_icgraph.md5  class_connectable_resizer_aed84a1196b91293d830e175106109743_cgraph.map  class_connectable_resizer_aed84a1196b91293d830e175106109743_cgraph.md5  class_connection_specifications-members.html  class_connection_specifications.html  class_connection_specifications.js  class_connection_specifications__coll__graph.map  class_connection_specifications__coll__graph.md5  class_connection_specifications__inherit__graph.map  class_connection_specifications__inherit__graph.md5  class_connection_specifications_a043bc6562d21bc8a52a8cf771b647d6d_cgraph.map  class_connection_specifications_a043bc6562d21bc8a52a8cf771b647d6d_cgraph.md5  class_connection_specifications_a3a7c5577e2664301af5631d393fa75f3_cgraph.map  class_connection_specifications_a3a7c5577e2664301af5631d393fa75f3_cgraph.md5  (+1208 more)
latex/: annotated.tex  class_connectable_resizer.tex  class_connectable_resizer__coll__graph.md5  class_connectable_resizer__inherit__graph.md5  (+579 more)
(+127 files in other folders)
